--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Alpine.js Template + webpack" />
     <meta
       name="keywords"
-      content="html, html5, template, biolerplate, webpack, alpine, alpine.js"
+      content="html, html5, css, javascript, js, template, alpine, alpine.js"
     />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <!-- jpg <link rel="icon" type="image/jpeg" href="images/favicon.jpg" /> -->
