--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Alpine.js Template - CDN</title>
+    <title>HTML Template + Alpine.js (CDN)</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="PhDr. Matej Lednár, PhD." />
-    <meta name="description" content="Alpine.js Template + webpack" />
+    <meta name="description" content="HTML Template + Alpine.js (CDN)" />
     <meta
       name="keywords"
-      content="html, html5, css, javascript, js, template, alpine, alpine.js"
+      content="html, html5, css, javascript, js, template, alpine, alpine.js, cdn"
     />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <!-- jpg <link rel="icon" type="image/jpeg" href="images/favicon.jpg" /> -->
