--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       name="keywords"
       content="html, html5, css, javascript, js, template, alpine, alpine.js, cdn"
     />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
-    <!-- jpg <link rel="icon" type="image/jpeg" href="images/favicon.jpg" /> -->
-    <!-- png <link rel="icon" type="image/png" href="/images/favicon.png" /> -->
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="index.html" />
+    <!-- jpg <link rel="icon" type="image/jpeg" href="./images/favicon.jpg" /> -->
+    <!-- png <link rel="icon" type="image/png" href="./images/favicon.png" /> -->
+    <link rel="stylesheet" href="./css/styles.css" />
     <script
       defer
       src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"
     ></script>
-    <script defer src="js/script.js"></script>
+    <script defer src="./js/script.js"></script>
     <style></style>
   </head>
 
